# BDII_P1

./: .gitignore  BPlusTree.h  CMakeLists.txt  Makefile  README.md  SequentialFile.h  Student.h  main.cpp  run.bat  runLinux.sh
backend_parser/: CMakeLists.txt
backend_parser/include/: api.h  parser.h
backend_structures/: CMakeLists.txt
backend_structures/dataStructures/: test_time.cpp
backend_structures/dataStructures/BplusTree/: BPlusTree.h  Student.h  appleRecord.h  main.cpp  prueba.cpp
backend_structures/dataStructures/avlFile/: AVLFile.h  AVLFileMetrics.h  avlfile.cpp  exampleRecord.h
backend_structures/dataStructures/dbs/: AppleStore.csv  AppleStore_new.csv  appleRecord.h  prueba.py  test.cpp
backend_structures/dataStructures/extendibleHash/: extHashExperiment.cpp  extendible.h  extendibleHashOficial.h  extendibleHashing.h  testEH.cpp
backend_structures/dataStructures/extendibleHashing/: extendible.h  extendibleHash.cpp  extendibleHashPrimary.cpp  extendibleHashing.cpp
backend_structures/dataStructures/sequentialFile/: CMakeLists.txt  SequentialFile.h  main.cpp  sequentialFile.cpp
backend_structures/experiments/: avlExperiment.cpp
backend_structures/include/: api.h
backend_structures/src/: main.cpp
bd_front/: package-lock.json  package.json  tailwind.config.ts
bd_front/app/: layout.tsx  page.tsx
bd_front/app/components/: Dashboard.tsx  QueryResults.tsx  QuerySearch.tsx  SearchBar.tsx  TablesInDB.tsx  Top.tsx  dataquery.json  datatable.json
bd_front/app/components/MessageDisplay/: MessageDisplay.tsx
bd_front/app/dashboard/: page.tsx
bd_front/app/types/: appleRecord.ts  messageDisplay.ts
dataStructures/avlFile/: avl.cpp
dataStructures/dbs/: facebookRecord.h  test.cpp
include/: api.h  parser.h
sequentialfile/: SequentialFile.h  Student.h
(+2 files in other folders)
